<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".Modification">


    <Button
        android:id="@+id/cancelBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_cancel_icon"
        android:drawableLeft="@drawable/ic_cancel_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_task"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/modifyTitleIInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/edit_task_title"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxt" />

    <EditText
        android:id="@+id/modifyTaskInfoInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/edit_task"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTitleIInput" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyTaskInfoInput">

        <RadioButton
            android:id="@+id/radioCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/completed"
            android:textColorLink="@color/colorBlack"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="348dp" />

        <RadioButton
            android:id="@+id/radioUnCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Uncompleted"
            android:textColor="@color/colorBlack"
            tools:layout_editor_absoluteX="244dp"
            tools:layout_editor_absoluteY="396dp" />

    </RadioGroup>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_border_green"
        android:drawableEnd="@drawable/ic_update_icon"
        android:drawableRight="@drawable/ic_update_icon"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/update_task"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_border_red"
        android:drawableEnd="@drawable/ic_delete_icon"
        android:drawableRight="@drawable/ic_delete_icon"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/delete_task"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/updateBtn"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>